Adding AI service and related configurations with RabbitMQ